--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
@@ -53,5 +52,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
     implementation 'co.zsmb:materialdrawer-kt:2.0.1'
-    implementation "com.github.calintat.alps:alps-core:2.0.2"
+    implementation 'com.diogobernardino:williamchart:3.1.1'
 }
