--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.diogobernardino:williamchart:3.1.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
 }
 apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.google-services'
