--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,14 +48,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
     implementation 'co.zsmb:materialdrawer-kt:2.0.1'
     implementation 'com.diogobernardino:williamchart:3.1.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+    implementation 'com.ryanjeffreybrooks:indefinitepagerindicator:1.0.10'
 }
 apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.google-services'
