--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,45 @@
 language: android
-dist: trusty
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
+before_install:
+  - chmod +x gradlew
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+
+
+before_script:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  - bash update_sdk.sh
+
+jdk: oraclejdk8
+
+env:
+  global:
+    - ANDROID_ABI=armeabi-v7a
+  matrix:
+    - ANDROID_TARGET=android-28
+
 android:
   components:
     - tools
     - platform-tools
-
-    # The BuildTools version used by your project
     - build-tools-28.0.3
-
-    # The SDK version used to compile your project
     - android-28
-
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
+    - extra-android-support
     - extra-android-m2repository
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+    - '.+'
+
+script:
+  - ./gradlew build
