--- a/.travis.yml
+++ b/.travis.yml
@@ -42,4 +42,4 @@ android:
     - '.+'
 
 script:
-  - ./gradlew build
+  -  ./gradlew build -x lint -x processDebugGoogleServices -x fabricGenerateResourcesDebug -x processReleaseGoogleServices -x fabricGenerateResourcesRelease
