--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "com.moowork.node" version "1.3.1"
+}
+
 allprojects {
     repositories {
         google()
@@ -30,4 +34,22 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+task includeCoriolisData(type: Copy) {
+    from file("coriolis-data/dist/index.json")
+    into file("app/src/main/assets/")
+    dependsOn(':updateCoriolisData')
+}
+
+task updateCoriolisData(type: NodeTask) {
+    workingDir = file("coriolis-data")
+    script = file ("coriolis-data/generate_distribution.js")
+    args = ['install']
+    dependsOn(':coriolisDataPull')
+}
+
+task coriolisDataPull(type: Exec) {
+    workingDir = file("coriolis-data")
+    commandLine "git", "pull"
 }
