--- a/build.gradle
+++ b/build.gradle
@@ -51,5 +51,5 @@ task updateCoriolisData(type: NodeTask) {
 
 task coriolisDataPull(type: Exec) {
     workingDir = file("coriolis-data")
-    commandLine "git", "pull"
+    commandLine "git", "pull","origin","master"
 }
