--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
 before_script:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
   - bash update_sdk.sh
+  - ./gradlew npmSetup
 
 jdk: oraclejdk8
 
