--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
         targetCompatibility = 1.8
     }
     buildToolsVersion = '28.0.3'
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
