--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
     lintOptions {
         abortOnError false
     }
+    lintOptions {
+        tasks.lint.enabled = false
+    }
 }
 
 dependencies {
